--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -4,6 +4,10 @@
   @media (min-width: 660px) {
     min-height: 127px;
   }
+
+  @media (min-width: 940px) {
+    min-height: 197px;
+  }
 }
 
 .footer__developer {
@@ -50,6 +54,10 @@
     min-height: 127px;
     padding: 0 0 20px 0;
     align-items: center;
+  }
+
+  @media (min-width: 940px) {
+    padding: 38px 0 0 0;
   }
 }
 
