--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -6,4 +6,37 @@
   font-style: normal;
   font-weight: 400;
   line-height: 30px;
+  text-align: center;
+  margin: 44px 0 50px 0;
+
+  @media (min-width: 660px) {
+    font-size: 18px;
+    margin: 91px 0 77px 0;
+  }
+
+  @media (min-width: 940px) {
+    margin: 91px 0 89px 0;
+  }
+}
+
+.main__slogan-tablet-br {
+  display: none;
+
+  @media (min-width: 660px) {
+    display: block;
+  }
+
+  @media (min-width: 940px) {
+    display: none;
+  }
+}
+
+.main__slogan-mobile-br {
+  @media (min-width: 660px) {
+    display: none;
+  }
+
+  @media (min-width: 940px) {
+    display: block;
+  }
 }
