--- a/source/less/blocks/other-picture.less
+++ b/source/less/blocks/other-picture.less
@@ -6,6 +6,132 @@
   @media (min-width: 660px) {
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 50px;
+    gap: 20px;
+  }
+
+  @media (min-width: 940px) {
+    gap: 0;
+  }
+}
+
+.other-picture__user-card-link-1 {
+  display: block;
+  background-image: url("../img/photo-1-mobile.jpg");
+  min-width: 280px;
+  background-repeat: no-repeat;
+  min-height: 180px;
+  background-size: 100%;
+
+  @media (min-width: 660px) {
+    min-width: 300px;
+    min-height: 300px;
+    background-image: url("../img/photo-1-tablet.jpg");
+  }
+
+  @media (min-width: 940px) {
+    min-height: 400px;
+    background-image: url("../img/photo-1-desktop.jpg");
+  }
+}
+
+.other-picture__user-card-link-2 {
+  display: block;
+  background-image: url("../img/photo-2-mobile.jpg");
+  min-width: 280px;
+  background-repeat: no-repeat;
+  min-height: 180px;
+  background-size: 100%;
+
+  @media (min-width: 660px) {
+    min-width: 300px;
+    min-height: 300px;
+    background-image: url("../img/photo-2-tablet.jpg");
+  }
+
+  @media (min-width: 940px) {
+    min-height: 400px;
+    background-image: url("../img/photo-2-desktop.jpg");
+  }
+}
+
+.other-picture__user-card-link-3 {
+  display: block;
+  background-image: url("../img/photo-3-mob.jpg");
+  min-width: 280px;
+  background-repeat: no-repeat;
+  min-height: 180px;
+  background-size: 100%;
+
+  @media (min-width: 660px) {
+    min-width: 300px;
+    min-height: 300px;
+    background-image: url("../img/photo-3-tablet.jpg");
+  }
+
+  @media (min-width: 940px) {
+    min-height: 400px;
+    background-image: url("../img/photo-3-desktop.jpg");
+  }
+}
+
+.other-picture__user-card-link-4 {
+  display: block;
+  background-image: url("../img/photo-4-mob.jpg");
+  min-width: 280px;
+  background-repeat: no-repeat;
+  min-height: 180px;
+  background-size: 100%;
+
+  @media (min-width: 660px) {
+    min-width: 300px;
+    min-height: 300px;
+    background-image: url("../img/photo-4-tablet.jpg");
+  }
+
+  @media (min-width: 940px) {
+    min-height: 400px;
+    background-image: url("../img/photo-4-desktop.jpg");
+  }
+}
+
+.other-picture__user-card-link-5 {
+  display: block;
+  background-image: url("../img/photo-5-mob.jpg");
+  min-width: 280px;
+  background-repeat: no-repeat;
+  min-height: 180px;
+  background-size: 100%;
+
+  @media (min-width: 660px) {
+    min-width: 300px;
+    min-height: 300px;
+    background-image: url("../img/photo-5-tablet.jpg");
+  }
+
+  @media (min-width: 940px) {
+    min-height: 400px;
+    background-image: url("../img/photo-5-desktop.jpg");
+  }
+}
+
+.other-picture__user-card-link-6 {
+  display: block;
+  background-image: url("../img/photo-6-mob.jpg");
+  min-width: 280px;
+  background-repeat: no-repeat;
+  min-height: 180px;
+  background-size: 100%;
+
+  @media (min-width: 660px) {
+    min-width: 300px;
+    min-height: 300px;
+    background-image: url("../img/photo-6-tablet.jpg");
+  }
+
+  @media (min-width: 940px) {
+    min-height: 400px;
+    background-image: url("../img/photo-6-desktop.jpg");
   }
 }
 
@@ -13,10 +139,41 @@
   width: 100%;
   min-width: 280px;
   max-width: 300px;
+  margin-top: 20px;
+
+  @media (min-width: 660px) {
+    margin-top: 0;
+  }
+}
+
+.other-picture__user-card:nth-child(n+5) {
+  @media (min-width: 940px) {
+    margin-top: 55px;
+  }
 }
 
 .other-picture__user-card-inf {
+  min-height: 143px;
   background-color: @grey;
+  padding-top: 18px;
+  position: relative;
+
+  @media (min-width: 660px) {
+    padding-top: 23px;
+    min-height: 155px;
+  }
+}
+
+.other-picture__user-card-inf-small {
+  min-height: 121px;
+  background-color: @grey;
+  padding-top: 18px;
+  position: relative;
+
+  @media (min-width: 660px) {
+    padding-top: 23px;
+    min-height: 155px;
+  }
 }
 
 .other-picture__user-card-name {
@@ -25,6 +182,15 @@
   font-weight: 700;
   line-height: 24px;
   color: @blue;
+  margin-left: 17px;
+
+  @media (min-width: 660px) {
+    margin-left: 30px;
+  }
+
+  @media (min-width: 940px) {
+    margin-left: 27px;
+  }
 }
 
 .other-picture__user-card-status {
@@ -41,7 +207,18 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
+  margin: 0;
+  padding-left: 17px;
+  text-align: left;
   line-height: 24px;
+
+  @media (min-width: 660px) {
+    padding-left: 30px;
+  }
+
+  @media (min-width: 940px) {
+    padding-left: 27px;
+  }
 }
 
 .other-picture__like {
@@ -51,6 +228,36 @@
   line-height: 24px;
   text-transform: uppercase;
   color: @red;
+  margin: 12px 0 0 48px;
+  position: relative;
+
+  &::before {
+    content: "";
+    width: 13px;
+    height: 12px;
+    position: absolute;
+    left: -31px;
+    top: 6px;
+    background-image: url("../img/like.svg");
+
+    @media (min-width: 660px) {
+      left: 227px;
+    }
+
+    @media (min-width: 940px) {
+      left: 230px;
+    }
+  }
+
+  @media (min-width: 660px) {
+    position: absolute;
+    bottom: 23px;
+    left: -18px;
+  }
+
+  @media (min-width: 940px) {
+    left: -21px;
+  }
 }
 
 .other-picture__slogan-text {
