--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,8 @@
 @import "blocks/container.less";
 @import "blocks/page.less";
 @import "blocks/page-header.less";
+@import "blocks/page-header-catalog.less";
+@import "blocks/page-header-form.less";
 @import "blocks/visually-hidden.less";
 @import "blocks/main-nav.less";
 @import "blocks/main.less";
