--- a/source/less/blocks/fake-inform.less
+++ b/source/less/blocks/fake-inform.less
@@ -19,6 +19,10 @@
     background-position: 0 56px;
     min-height: 330px;
     background-size: 238px 276px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/clock@2x.png");
+    }
   }
 
   @media (min-width: 940px) {
@@ -26,6 +30,10 @@
     background-position: 0 6px;
     min-height: 429px;
     background-color: @grey;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/clock-desctop@2x.png");
+    }
   }
 }
 
