--- a/source/less/blocks/other-picture.less
+++ b/source/less/blocks/other-picture.less
@@ -23,15 +23,27 @@
   min-height: 180px;
   background-size: 100%;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/photo-1-mobile@2x.jpg");
+  }
+
   @media (min-width: 660px) {
     min-width: 300px;
     min-height: 300px;
     background-image: url("../img/photo-1-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-1-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: 940px) {
     min-height: 400px;
     background-image: url("../img/photo-1-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-1-desktop@2x.jpg");
+    }
   }
 }
 
@@ -43,15 +55,27 @@
   min-height: 180px;
   background-size: 100%;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/photo-2-mobile@2x.jpg");
+  }
+
   @media (min-width: 660px) {
     min-width: 300px;
     min-height: 300px;
     background-image: url("../img/photo-2-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-2-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: 940px) {
     min-height: 400px;
     background-image: url("../img/photo-2-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-2-desktop@2x.jpg");
+    }
   }
 }
 
@@ -63,15 +87,27 @@
   min-height: 180px;
   background-size: 100%;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/photo-3-mob@2x.jpg");
+  }
+
   @media (min-width: 660px) {
     min-width: 300px;
     min-height: 300px;
     background-image: url("../img/photo-3-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-3-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: 940px) {
     min-height: 400px;
     background-image: url("../img/photo-3-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-3-desktop@2x.jpg");
+    }
   }
 }
 
@@ -83,15 +119,27 @@
   min-height: 180px;
   background-size: 100%;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/photo-4-mob@2x.jpg");
+  }
+
   @media (min-width: 660px) {
     min-width: 300px;
     min-height: 300px;
     background-image: url("../img/photo-4-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-4-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: 940px) {
     min-height: 400px;
     background-image: url("../img/photo-4-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-4-desktop@2x.jpg");
+    }
   }
 }
 
@@ -103,15 +151,27 @@
   min-height: 180px;
   background-size: 100%;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/photo-5-mob@2x.jpg");
+  }
+
   @media (min-width: 660px) {
     min-width: 300px;
     min-height: 300px;
     background-image: url("../img/photo-5-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-5-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: 940px) {
     min-height: 400px;
     background-image: url("../img/photo-5-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-5-desktop@2x.jpg");
+    }
   }
 }
 
@@ -123,15 +183,28 @@
   min-height: 180px;
   background-size: 100%;
 
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/photo-6-mob@2x.jpg");
+  }
+
   @media (min-width: 660px) {
     min-width: 300px;
     min-height: 300px;
     background-image: url("../img/photo-6-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-6-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: 940px) {
     min-height: 400px;
     background-image: url("../img/photo-6-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/photo-6-desktop@2x.jpg");
+    }
   }
 }
 
