--- a/source/less/blocks/page-header-form.less
+++ b/source/less/blocks/page-header-form.less
@@ -5,6 +5,10 @@
     background-repeat: no-repeat;
     background-position: 0 0;
     min-height: 394px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/back-desktop@2x.jpg");
+    }
   }
 }
 
@@ -212,9 +216,17 @@
   background-size: cover;
   background-position: 0 23%;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/back-mobile@2x.jpg");
+  }
+
   @media (min-width: 660px) {
     background-image: url("../img/back-tablet.jpg");
     background-position: 0 27%;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/back-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: 940px) {
