--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -67,11 +67,10 @@
   width: 74px;
   height: 23px;
   display: block;
-  background-image: url("../img/pink.svg");
-  background-repeat: no-repeat;
+  fill: @white;
 
   &:hover {
-    background-image: url("../img/pink-hover.svg");
+    fill: @red;
   }
 
   &:active {
@@ -79,23 +78,35 @@
   }
 
   @media (min-width: 660px) {
-    background-image: url("../img/logotype-white-tablet.svg");
     width: 145px;
     height: 40px;
     margin-bottom: 15px;
-
-    &:hover {
-      background-image: url("../img/logo-hover-tablet.svg");
-    }
-
-    &:active {
-      background-image: url("../img/logo-active-tablet.svg");
-    }
   }
 
   @media (min-width: 940px) {
-    background-image: url("../img/logo-desktop.svg");
     width: 147px;
+  }
+}
+
+.page-header__mob-logo {
+  @media (min-width: 660px) {
+    display: none;
+  }
+}
+
+.page-header__tablet-logo {
+  display: none;
+
+  @media (min-width: 660px) and (max-width: 939px) {
+    display: block;
+  }
+}
+
+.page-header__desktop-logo {
+  display: none;
+
+  @media (min-width: 940px) {
+    display: block;
   }
 }
 
@@ -182,7 +193,6 @@
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
-  padding-bottom: 10px;
   line-height: 32px;
   text-transform: uppercase;
 
