оптимизация графики каталога

--- a/source/less/blocks/main-picture.less
+++ b/source/less/blocks/main-picture.less
@@ -4,32 +4,25 @@
   display: block;
   position: relative;
   min-width: 320px;
-  min-height: 137px;
-  background-image: url("../img/main-pic-mob.jpg");
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/main-pic-mob@2x.jpg");
-  }
+  height: auto;
 
   @media (min-width: 660px) {
-    background-image: url("../img/panorama-tablet.jpg");
     min-height: 509px;
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/panorama-tablet@2x.jpg");
-    }
   }
 
   @media (min-width: 940px) {
-    background-image: url("../img/panorama-desktop.jpg");
     min-height: 506px;
+  }
+}
 
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/panorama-desktop@2x.jpg");
-    }
+.main-picture__link-pic {
+  min-width: 320px;
+  display: block;
+  width: 100%;
+  height: auto;
+
+  @media (min-width: 940px) {
+    min-height: 506px;
   }
 }
 
