--- a/source/less/blocks/other-picture.less
+++ b/source/less/blocks/other-picture.less
@@ -15,196 +15,22 @@
   }
 }
 
-.other-picture__user-card-link-1 {
+.other-picture__user-card-link {
   display: block;
-  background-image: url("../img/photo-1-mobile.jpg");
-  min-width: 280px;
-  background-repeat: no-repeat;
-  min-height: 180px;
-  background-size: 100%;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/photo-1-mobile@2x.jpg");
-  }
-
-  @media (min-width: 660px) {
-    min-width: 300px;
-    min-height: 300px;
-    background-image: url("../img/photo-1-tablet.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-1-tablet@2x.jpg");
-    }
-  }
-
-  @media (min-width: 940px) {
-    min-height: 400px;
-    background-image: url("../img/photo-1-desktop.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-1-desktop@2x.jpg");
-    }
-  }
+  width: 100%;
+  height: auto;
 }
 
-.other-picture__user-card-link-2 {
+.other-picture__user-card-link img {
   display: block;
-  background-image: url("../img/photo-2-mobile.jpg");
-  min-width: 280px;
-  background-repeat: no-repeat;
-  min-height: 180px;
-  background-size: 100%;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/photo-2-mobile@2x.jpg");
-  }
 
   @media (min-width: 660px) {
-    min-width: 300px;
-    min-height: 300px;
-    background-image: url("../img/photo-2-tablet.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-2-tablet@2x.jpg");
-    }
+    width: 300px;
+    height: 300px;
   }
 
   @media (min-width: 940px) {
-    min-height: 400px;
-    background-image: url("../img/photo-2-desktop.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-2-desktop@2x.jpg");
-    }
-  }
-}
-
-.other-picture__user-card-link-3 {
-  display: block;
-  background-image: url("../img/photo-3-mob.jpg");
-  min-width: 280px;
-  background-repeat: no-repeat;
-  min-height: 180px;
-  background-size: 100%;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/photo-3-mob@2x.jpg");
-  }
-
-  @media (min-width: 660px) {
-    min-width: 300px;
-    min-height: 300px;
-    background-image: url("../img/photo-3-tablet.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-3-tablet@2x.jpg");
-    }
-  }
-
-  @media (min-width: 940px) {
-    min-height: 400px;
-    background-image: url("../img/photo-3-desktop.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-3-desktop@2x.jpg");
-    }
-  }
-}
-
-.other-picture__user-card-link-4 {
-  display: block;
-  background-image: url("../img/photo-4-mob.jpg");
-  min-width: 280px;
-  background-repeat: no-repeat;
-  min-height: 180px;
-  background-size: 100%;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/photo-4-mob@2x.jpg");
-  }
-
-  @media (min-width: 660px) {
-    min-width: 300px;
-    min-height: 300px;
-    background-image: url("../img/photo-4-tablet.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-4-tablet@2x.jpg");
-    }
-  }
-
-  @media (min-width: 940px) {
-    min-height: 400px;
-    background-image: url("../img/photo-4-desktop.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-4-desktop@2x.jpg");
-    }
-  }
-}
-
-.other-picture__user-card-link-5 {
-  display: block;
-  background-image: url("../img/photo-5-mob.jpg");
-  min-width: 280px;
-  background-repeat: no-repeat;
-  min-height: 180px;
-  background-size: 100%;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/photo-5-mob@2x.jpg");
-  }
-
-  @media (min-width: 660px) {
-    min-width: 300px;
-    min-height: 300px;
-    background-image: url("../img/photo-5-tablet.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-5-tablet@2x.jpg");
-    }
-  }
-
-  @media (min-width: 940px) {
-    min-height: 400px;
-    background-image: url("../img/photo-5-desktop.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-5-desktop@2x.jpg");
-    }
-  }
-}
-
-.other-picture__user-card-link-6 {
-  display: block;
-  background-image: url("../img/photo-6-mob.jpg");
-  min-width: 280px;
-  background-repeat: no-repeat;
-  min-height: 180px;
-  background-size: 100%;
-
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/photo-6-mob@2x.jpg");
-  }
-
-  @media (min-width: 660px) {
-    min-width: 300px;
-    min-height: 300px;
-    background-image: url("../img/photo-6-tablet.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-6-tablet@2x.jpg");
-    }
-  }
-
-  @media (min-width: 940px) {
-    min-height: 400px;
-    background-image: url("../img/photo-6-desktop.jpg");
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/photo-6-desktop@2x.jpg");
-    }
+    height: 400px;
   }
 }
 
