--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -14,7 +14,7 @@
   line-height: 29px;
   color: @blue;
   text-align: center;
-  margin: 42px 0 34px 0;
+  margin: 39px 0 34px 0;
 
   @media (min-width: 660px) {
     font-size: 40px;
@@ -27,6 +27,7 @@
   @media (min-width: 940px) {
     font-size: 50px;
     line-height: 68px;
+    margin: 59px 0 41px 0;
   }
 }
 
@@ -114,6 +115,10 @@
 
   &:active {
     opacity: 0.3;
+  }
+
+  @media (min-width: 940px) {
+    margin-bottom: -40px;
   }
 }
 
