--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -223,7 +223,7 @@
 
   @media (min-resolution: 2dppx) {
     background-image: url("../../img/hend@2x.png"), url("../img/back-mobile@2x.jpg");
-    background-size: 320px auto;
+    background-size: 320px auto, cover;
   }
 
   @media (min-width: 660px) {
