--- a/source/less/blocks/fake-inform.less
+++ b/source/less/blocks/fake-inform.less
@@ -39,16 +39,17 @@
 
 .fake-inform__heading {
   @media (min-width: 660px) {
-    padding: 101px 0 0 310px;
+    padding: 98px 0 0 301px;
     font-size: 30px;
     font-style: normal;
     font-weight: 700;
     line-height: 36px;
     margin: 0;
+    min-width: 168px;
   }
 
   @media (min-width: 940px) {
-    padding: 113px 0 25px 369px;
+    padding: 113px 0 25px 363px;
     line-height: 30px;
   }
 }
