--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -87,7 +87,7 @@
   line-height: 25px;
 
   @media (min-width: 940px) {
-    padding-bottom: 29px;
+    padding-bottom: 20px;
   }
 }
 
@@ -117,8 +117,13 @@
     opacity: 0.3;
   }
 
+  @media (min-width: 660px) {
+    padding: 0 0 0 21px;
+  }
+
   @media (min-width: 940px) {
     margin-bottom: -40px;
+    padding: 0;
   }
 }
 
@@ -127,6 +132,41 @@
   min-width: 320px;
   height: 200px;
   margin-top: 34px;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    content: "";
+    width: 100%;
+    height: 52px;
+    background-image: url("../img/triangle-map-mob.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center 100%;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/triangle-map-mob@2x.png");
+    }
+
+    @media (min-width: 660px) {
+      background-image: url("../img/triangle-map-tablet.png");
+      height: 68px;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/triangle-map-tablet@2x.png");
+      }
+    }
+
+    @media (min-width:940px) {
+      background-image: url("../img/triangle-map-desctop.png");
+      height: 120px;
+      background-position: 0 80%;
+   
+      @media (min-resolution: 2dppx) {
+        background-image: url("../../img/triangle-map-desctop@2x.png");
+      }
+    }
+  }
 
   @media (min-width: 660px) {
     min-height: 374px;
@@ -137,26 +177,6 @@
   }
 }
 
-.feedback__top-img {
-  background-image: url("../img/triangle-white-footer.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  height: 52px;
-  width: 100%;
-  position: absolute;
-
-  @media (min-width: 660px) {
-    height: 68px;
-    background-image: url("../img/triangle-white-tablet.png");
-  }
-
-  @media (min-width: 940px) {
-    height: 123px;
-    background-image: url("../img/triangle-white-desctop.png");
-    background-size: 100% 100%;
-  }
-}
-
 .feedback__online-map {
   min-width: 320px;
   max-width: 9400px;
@@ -164,10 +184,10 @@
   min-height: 200px;
 
   @media (min-width: 660px) {
-    height: 374px;
+    height: 365px;
   }
 
   @media (min-width: 940px) {
-    height: 502px;
+    height: 526px;
   }
 }
