--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -88,25 +88,9 @@
   }
 }
 
-.page-header__mob-logo {
-  @media (min-width: 660px) {
-    display: none;
-  }
-}
-
-.page-header__tablet-logo {
-  display: none;
-
-  @media (min-width: 660px) and (max-width: 939px) {
-    display: block;
-  }
-}
-
-.page-header__desktop-logo {
-  display: none;
-
-  @media (min-width: 940px) {
-    display: block;
+.page-header__main-desktop-logo {
+  @media (min-width: 320px) and (max-width: 659px) {
+    margin: -17px 0 0 -72px;
   }
 }
 
