--- a/source/less/blocks/send-popup.less
+++ b/source/less/blocks/send-popup.less
@@ -10,6 +10,7 @@
   margin: auto;
   background-color: @white;
   z-index: 100;
+  box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
 }
 
 .send-popup__heading {
@@ -59,12 +60,12 @@
   font-weight: 700;
   line-height: 30px;
   text-align: center;
-  padding: 23px 0;
+  padding: 23px 10px;
   background-color: @green;
   border: none;
   border-radius: 2px;
   color: @white;
-  width: 320px;
+  min-width: 276px;
 
   @media (min-width: 660px) {
     width: 295px;
