--- a/source/less/blocks/send-popup.less
+++ b/source/less/blocks/send-popup.less
@@ -10,7 +10,7 @@
   margin: auto;
   background-color: @white;
   z-index: 100;
-  box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
+  box-shadow: 0px 7px 15px fade(@black, 15%);
 }
 
 .send-popup__heading {
