--- a/source/less/blocks/benefits.less
+++ b/source/less/blocks/benefits.less
@@ -11,10 +11,11 @@
   }
 
   @media (min-width: 660px) {
-    background-position: 19px 9px, 0 -80px;
+    background-position: 19px 9px, 0 -87px;
     background-size: 269px 547px, cover;
     overflow-x: hidden;
     overflow-y: hidden;
+    background-image: url("../img/phone-main-tablet.png"), url("../img/grey-back@2x.png");
     min-height: 487px;
     max-height: 487px;
 
@@ -26,7 +27,7 @@
   }
 
   @media (min-width: 940px) {
-    background-image: url("../img/grey-back.png");
+    background-image: url("../img/test.svg");
     background-size: cover;
     background-position: 0 6%;
     padding-bottom: 0;
