--- a/source/less/blocks/fake-inform.less
+++ b/source/less/blocks/fake-inform.less
@@ -69,6 +69,7 @@
     padding-left: 310px;
     margin: 0 0 10px 0;
     padding-top: 8px;
+    padding-right: 3px;
   }
 
   @media (min-width: 940px) {
