--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -97,6 +97,16 @@
   padding-left: 20px;
   margin-top: 5px;
 
+  &::-webkit-input-placeholder {
+    color: @blue;
+    font-family: "Open Sans";
+  }
+  
+  &::-webkit-input-placeholder {
+    color: @blue;
+    font-family: "Open Sans";
+  }
+
   @media (min-width: 940px) {
     width: 100%;
   }
@@ -416,6 +426,16 @@
   padding-left: 20px;
   margin: 5px 0 17px;
 
+  &::-webkit-input-placeholder {
+    color: @blue;
+    font-family: "Open Sans";
+  }
+  
+  &::-webkit-input-placeholder {
+    color: @blue;
+    font-family: "Open Sans";
+  }
+
   @media (min-width: 660px) {
     max-width: 440px;
     margin: 0 0 0 59px;
@@ -700,6 +720,17 @@
   border: 2px solid @dark-grey;
 
   &::-webkit-input-placeholder {
+    color: @blue;
+    font-family: "Open Sans";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+  }
+  
+  &::-webkit-input-placeholder {
+    color: @blue;
+    font-family: "Open Sans";
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -714,7 +745,6 @@
 
   @media (min-width: 940px) {
     margin: 31px auto;
-
     width: 100%;
     max-width: 816px;
     min-width: 800px;
@@ -789,6 +819,7 @@
   background-color: @green;
   text-transform: uppercase;
   width: 100%;
+  font-family: "Open Sans";
   text-align: center;
   padding: 15px 34px;
   font-size: 18px;
