--- a/source/less/blocks/oops-popup.less
+++ b/source/less/blocks/oops-popup.less
@@ -11,6 +11,10 @@
   background-color: @white;
   z-index: 100;
   box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
+
+  @media (min-width: 660px) and (max-width: 939px) {
+    max-width: 460px;
+  }
 }
 
 .oops-popup__heading {
@@ -19,13 +23,13 @@
   font-weight: 700;
   line-height: 24px;
   text-align: center;
-  margin: 44px 0 37px;
+  margin: 37px 0 25px;
 
   @media (min-width: 660px) {
     font-size: 30px;
     line-height: 40px;
-    padding: 0 133px;
-    margin: 49px 0 37px;
+    padding: 0 100px;
+    margin: 38px 0 23px;
   }
 }
 
@@ -35,12 +39,18 @@
   font-weight: 400;
   line-height: 24px;
   text-align: center;
-  margin-bottom: 35px;
+  margin-bottom: 41px;
   padding: 0 5px;
 
   @media (min-width: 660px) {
     font-size: 18px;
-    padding: 0 160px;
+    padding: 0 80px;
+    margin-bottom: 32px;
+  }
+
+  @media (min-width: 940px) {
+    padding: 0 183px;
+    margin-bottom: 62px;
   }
 }
 
@@ -57,13 +67,13 @@
 .oops-popup__btn {
   text-transform: uppercase;
   cursor: pointer;
-  margin: 52px 0;
+  margin: 0 0 49px 0;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: 30px;
   text-align: center;
-  padding: 23px 10px;
+  padding: 17px 10px;
   background-color: @green;
   border: none;
   border-radius: 2px;
@@ -72,9 +82,13 @@
 
   @media (min-width: 660px) {
     width: 295px;
+    margin: 0 0 52px 0;
+    padding: 16px 10px;
   }
 
   @media (min-width: 940px) {
-    width: 456px;
+    width: 301px;
+    margin: 49px 0 50px;
+    padding: 18px 10px;
   }
 }
