--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -328,11 +328,13 @@
 
   @media (min-width: 660px) {
     width: 300px;
-    margin: 46px 0 38px;
+    margin: 46px 0 33px;
+    padding: 0 16px;
   }
 
   @media (min-width: 940px) {
     margin: 67px 0 54px;
+    padding: 0 14px;
   }
 }
 
@@ -340,24 +342,35 @@
   width: 47px;
   height: 56px;
   display: block;
+  background-position: center;
   background-image: url("../img/apple-logo.svg");
   background-repeat: no-repeat;
 }
 
 .page-header__android {
-  width: 43px;
-  height: 47px;
+  width: 47px;
+  height: 56px;
   display: block;
+  background-position: 2px 6px;
   background-image: url("../img/android-logo.svg");
   background-repeat: no-repeat;
+
+  @media (min-width: 660px) and (max-width: 939px) {
+    background-position: 1px 6px;
+  }
 }
 
 .page-header__windows {
-  width: 44px;
-  height: 41px;
+  width: 47px;
+  height: 56px;
   display: block;
+  background-position: 2px 13px;
   background-image: url("../img/microsoft-logo.svg");
   background-repeat: no-repeat;
+  
+  @media (min-width: 660px) and (max-width: 939px) {
+    background-position: 1px 9px;
+  }
 }
 
 .page-header__text {
@@ -368,7 +381,6 @@
   font-style: normal;
   font-weight: 300;
   line-height: 24px;
-  opacity: 0.34;
   color: @white;
 
   @media (min-width: 660px) {
