--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -97,14 +97,11 @@
   padding-left: 20px;
   margin-top: 5px;
 
-  &::-webkit-input-placeholder {
+  &::-webkit-input-placeholder,
+  ::-moz-placeholder,
+  :-moz-placeholder {
     color: @blue;
-    font-family: "Open Sans";
-  }
-  
-  &::-webkit-input-placeholder {
-    color: @blue;
-    font-family: "Open Sans";
+    font-family: "Open Sans", "Arial", sans-serif;
   }
 
   @media (min-width: 940px) {
@@ -426,14 +423,11 @@
   padding-left: 20px;
   margin: 5px 0 17px;
 
-  &::-webkit-input-placeholder {
+  &::-webkit-input-placeholder,
+  ::-moz-placeholder,
+  :-moz-placeholder {
     color: @blue;
-    font-family: "Open Sans";
-  }
-  
-  &::-webkit-input-placeholder {
-    color: @blue;
-    font-family: "Open Sans";
+    font-family: "Open Sans", "Arial", sans-serif;
   }
 
   @media (min-width: 660px) {
@@ -719,18 +713,11 @@
   min-height: 201px;
   border: 2px solid @dark-grey;
 
-  &::-webkit-input-placeholder {
+  &::-webkit-input-placeholder,
+  ::-moz-placeholder,
+  :-moz-placeholder {
     color: @blue;
-    font-family: "Open Sans";
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 30px;
-  }
-  
-  &::-webkit-input-placeholder {
-    color: @blue;
-    font-family: "Open Sans";
+    font-family: "Open Sans", "Arial", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -819,7 +806,7 @@
   background-color: @green;
   text-transform: uppercase;
   width: 100%;
-  font-family: "Open Sans";
+  font-family: "Open Sans", "Arial", sans-serif;
   text-align: center;
   padding: 15px 34px;
   font-size: 18px;
