--- a/source/less/blocks/send-popup.less
+++ b/source/less/blocks/send-popup.less
@@ -66,8 +66,6 @@
   }
 }
 
-
-
 .send-popup__wrapper {
   background-color: @grey;
   display: flex;
@@ -79,7 +77,7 @@
 .send-popup__btn {
   text-transform: uppercase;
   cursor: pointer;
-  font-family: "Open Sans";
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
