правки по 2 защите

--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -189,7 +189,7 @@
 
   &::before {
     position: absolute;
-    top: 0;
+    top: -1px;
     content: "";
     width: 100%;
     height: 52px;
@@ -212,13 +212,8 @@
     }
 
     @media (min-width: 940px) {
-      background-image: url("../img/triangle-map-desctop.png");
+      background-image: url("../img/triangle-map.svg");
       height: 120px;
-      background-position: 0 80%;
-
-      @media (min-resolution: 2dppx) {
-        background-image: url("../../img/triangle-map-desctop@2x.png");
-      }
     }
   }
 
