--- a/source/less/blocks/page-header-form.less
+++ b/source/less/blocks/page-header-form.less
@@ -3,6 +3,7 @@
     background-image: url("../img/back-desktop.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: @blue;
     background-position: 0 0;
     min-height: 394px;
 
@@ -118,6 +119,13 @@
   @media (min-width: 940px) {
     display: none;
   }
+}
+
+.page-header-form__burger {
+  fill: @white;
+  width: 50px;
+  height: 24px;
+  display: none;
 }
 
 .page-header-form__toggle-btn {
