--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,6 +3,7 @@
     background-image: url("../img/back-desktop.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: @blue;
     background-position: center;
     min-height: 853px;
 
@@ -92,6 +93,13 @@
   @media (min-width: 320px) and (max-width: 659px) {
     margin: -17px 0 0 -72px;
   }
+}
+
+.page-header__burger {
+  fill: @white;
+  width: 50px;
+  height: 24px;
+  display: none;
 }
 
 .page-header__toggle-btn {
