--- a/source/less/blocks/benefits.less
+++ b/source/less/blocks/benefits.less
@@ -3,6 +3,7 @@
   background-repeat: no-repeat;
   background-position: 50% 110%, 0 -42px;
   padding-bottom: 0;
+  position: relative;
   background-size: 157px 320px, cover;
   min-height: 786px;
 
@@ -27,15 +28,18 @@
   }
 
   @media (min-width: 940px) {
-    background-image: url("../img/test.svg");
-    background-size: cover;
-    background-position: 0 6%;
     padding-bottom: 0;
     min-height: 608px;
+    background-color: @grey;
+    background-image: none;
 
-    @media (min-resolution: 2dppx) {
-      background-image: url("../img/grey-back-desctop@2x.png");
-      background-size: cover;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      border-top: 32px solid @white;
+      border-right: 100vw solid @grey;
+      border-top-width: 82px;
     }
   }
 }
