--- a/source/less/blocks/page-header-catalog.less
+++ b/source/less/blocks/page-header-catalog.less
@@ -4,6 +4,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0 0;
+    background-color: @blue;
     min-height: 394px;
 
     @media (min-resolution: 2dppx) {
@@ -92,6 +93,13 @@
   @media (min-width: 320px) and (max-width: 659px) {
     margin: -17px 0 0 -72px;
   }
+}
+
+.page-header-catalog__burger {
+  fill: @white;
+  width: 50px;
+  height: 24px;
+  display: none;
 }
 
 .page-header-catalog__toggle-btn {
